--- a/MASCARILLAS.html
+++ b/MASCARILLAS.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAT-MASCARILLAS</title>
-	<link rel="icon" href="images/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
@@ -28,17 +27,30 @@
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
-                    </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>MASCARILLA MEDIA CARA</h3>
-                        <p></p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="mascarillas/1.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>MASCARILLA MEDIA CARA</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="mascarillas/1.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Brindan protección respiratoria contra partículas y una amplia variedad de gases y vapores cuando se utilizan con cartuchos y filtros de 3M™ aprobados.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> 3M™
+                                    <br><br>
+                                    Modelo:<br>  6200
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div> 
             <div class="swiper-slide">
@@ -48,17 +60,32 @@
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
-                    </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>MASCARILLA CARA COMPLETA</h3>
-                        <p> </p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="mascarillas/2.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>MASCARILLA MEDIA CARA</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="mascarillas/2.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Válvula de exhalación brinda frescura y comodidad para uso prolongado. Excelente visibilidad. Sello facial suave y acojinado.
+                                    <br><br>Respire con facilidad al soldar, pulverizar o pintar.
+                                    <p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> 3M™
+                                    <br><br>
+                                    Modelo:<br> 6000    
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -68,17 +95,30 @@
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
-                    </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>CARTUCHOS PARA VAPORES Y GASES</h3>
-                        <p> </p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="mascarillas/3.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>MASCARILLA MEDIA CARA</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="mascarillas/3.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Brinda protección respiratoria contra vapores de Mercurio, gases de Cloro y partículas de sustancias específicas y reguladas por OSHA. Aprobado por NIOSH/MSHA; <br>se usa con los respiradores de media cara y cara completa 3M con soporte de filtro de bayoneta. No utilizar en áreas cerradas o espacios confinados.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> 3M™
+                                    <br><br>
+                                    Modelo:<br> MM-60929   
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -88,18 +128,64 @@
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
-                    </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>FILTROS</h3>
-                        <p>El prefiltro 3M 5N11 brinda una efectiva e higiénica protección respiratoria contra aerosoles
-                            sólidos y líquidos sin aceite.</p>
-                            <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="mascarillas/4.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>FILTROS</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="mascarillas/4.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Se ajusta a los Respiradores de 3M serie 6000, 7000 y FF-400. Recomendado por 3M para el alivio de molestias por niveles de vapor orgánico/gases ácidos y para protección de ozono de hasta 10 veces el OSHA PEL<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> 3M™
+                                    <br><br>
+                                    Modelo:<br> MM-2078 
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
+                </div>
+
+            </div>
+            <div class="swiper-slide">
+                <div class="icons">
+                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
+                    <img src="images/logo.png" alt="">
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                </div>
+                <div class="product-s">
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>EQUIPO DE RESPIRACIÓN AUTÓNOMA</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="https://www.dastecsrl.com.ar/uploads/productos/scott-safety/airPak2.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Es excelente para los trabajos en atmósferas peligrosas, los rescates y el ataque a incendios dando al trabajador una protección respiratoria máxima contra ambientes extremos (atmósferas IDLH).<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> SKÖLD SAFETY
+                                    <br><br>
+                                    Modelo:<br> SCBAP60FC 
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -109,17 +195,30 @@
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
-                    </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>EQUIPO DE RESPIRACION AUTONOMA</h3>
-                        <p> </p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="https://www.dastecsrl.com.ar/uploads/productos/scott-safety/airPak2.png" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>COMPRESOR DE AIRE</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="mascarillas/5.png" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Elimine rápidamente los residuos de estaciones de trabajo, infle bolsas para carga y accione herramientas neumáticas.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> CAMPBELL HAUSFELD
+                                    <br><br>
+                                    Modelo:<br> H-10916
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -129,37 +228,30 @@
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
-                    </label>
                 </div>
                 <div class="product-s">
-                    <div class="product-text">
-                        <h3>EQUIPO PARA LINEA DE AIRE</h3>
-                        <p> </p>
-                        <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="mascarillas/5.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="icons">
-                    <a href="MENU.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
-                    <label class="heart-checkbox">
-                        <input type="checkbox" />
-                        <i class="fa fa-heart"></i>
-                    </label>
-                </div>
-                <div class="product-s">
-                    <div class="product-text">
-                        <h3>MASCARILLAS DESECHABLES</h3>
-                        <p></p>
-                            <br>
-                    </div>
-                    <div class="product-i">
-                        <img src="https://cdn11.bigcommerce.com/s-lirzegtuuj/images/stencil/1280x1280/products/6211/11251/SRER002-0__77809.1695764069.png?c=1?imbypass=on" alt="">
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="product-text">
+                                <h3>COMPRESOR DE AIRE</h3>
+                            </div></td>
+                            <td><div class="product-i">
+                                <img src="https://cdn11.bigcommerce.com/s-lirzegtuuj/images/stencil/1280x1280/products/6211/11251/SRER002-0__77809.1695764069.png?c=1?imbypass=on" alt="">
+                            </div></td>       
+                        </tr>
+                        <tr>
+                            <td><div class="product-text">
+                                <p>Respirador desechable contra partículas sin presencia de aceite. Aplicaciones: Pulido, lijado, barrido, manejo de materiales en polvo.<p>
+                            </div></td>
+                            <td><div class="product-text">
+                                <p>
+                                    Marca:<br> 3M™
+                                    <br><br>
+                                    Modelo:<br> MM-8210
+                                <p>
+                            </div></td>      
+                        </tr>
+                    </table>
                 </div>
             </div>
          </div>
