--- a/INICIO.html
+++ b/INICIO.html
@@ -16,15 +16,17 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="images/logo.png" alt="" class="logo">
+            <img src="velnergroup.github.io-main/images/logo.png" alt="" class="logo">
         </a>
+        <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
-            <li><a class="active" href="#">Inicio</a></li>
-            <li><a href="#">Contactanos</a></li>
-            <li><a href="Quienes.html">Quienes somos</a></li>
-            <li><a href="https://velnergroup.github.io/MENU.html">Catalogo</a></li>
+            <li><a class="active" href="INICIO.html">Inicio</a></li>
+            <li><a href="#">Contáctanos</a></li>
+            <li><a href="#">Quienes somos</a></li>
+            <li><a href="https://velnergroup.github.io/MENU.html">Catálogo</a></li>
         </ul>
     </nav>
+    
     <section>
         <video muted autoplay loop>
             <source src="Fondo.mp4" type="video/mp4">
