--- a/Quienes.html
+++ b/Quienes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú Responsive</title>
-    <link rel="stylesheet" href="somos.css">
+    <link rel="stylesheet" href="intento.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -15,16 +15,17 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="images/logo.png" alt="" class="logo">
+            <img src="velnergroup.github.io-main/images/logo.png" alt="" class="logo">
         </a>
+        <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
             <li><a href="INICIO.html">Inicio</a></li>
             <li><a href="#">Contáctanos</a></li>
             <li><a class="active" href="#">Quienes somos</a></li>
             <li><a href="https://velnergroup.github.io/MENU.html">Catálogo</a></li>
         </ul>
-        
     </nav>
+    
     <section>
         <div class="texto">
             <p>En VELNER GROUP lo más importante son nuestros clientes basado en innovación y procesos que nos permitan conocer y satisfacer sus necesidades. Por ello, ofrecemos a nuestros clientes el mejor servicio de distribución y comercialización de productos de seguridad personal, productos de limpieza y jarcería</p>
