--- a/INICIO.html
+++ b/INICIO.html
@@ -22,8 +22,8 @@
         <ul>
             <li><a class="active" href="INICIO.html">Inicio</a></li>
             <li><a href="#">Contáctanos</a></li>
-            <li><a href="#">Quienes somos</a></li>
-            <li><a href="https://velnergroup.github.io/MENU.html">Catálogo</a></li>
+            <li><a href="Quienes.html">Quienes somos</a></li>
+            <li><a href="MENU.html">Catálogo</a></li>
         </ul>
     </nav>
     
