--- a/Quienes.html
+++ b/Quienes.html
@@ -21,8 +21,8 @@
         <ul>
             <li><a href="INICIO.html">Inicio</a></li>
             <li><a href="#">Contáctanos</a></li>
-            <li><a class="active" href="#">Quienes somos</a></li>
-            <li><a href="https://velnergroup.github.io/MENU.html">Catálogo</a></li>
+            <li><a class="active" href="Quienes.html">Quienes somos</a></li>
+            <li><a href="MENU.html">Catálogo</a></li>
         </ul>
     </nav>
     
