--- a/Quienes.html
+++ b/Quienes.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="images/logo.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Responsive</title>
+    <title>Quienes somos</title>
     <link rel="stylesheet" href="intento.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
