--- a/MASCARILLAS.html
+++ b/MASCARILLAS.html
@@ -234,7 +234,7 @@
                     <table>
                         <tr>
                             <td><div class="product-text">
-                                <h3>COMPRESOR DE AIRE</h3>
+                                <h3>CUBRE BOCAS</h3>
                             </div></td>
                             <td><div class="product-i">
                                 <img src="https://cdn11.bigcommerce.com/s-lirzegtuuj/images/stencil/1280x1280/products/6211/11251/SRER002-0__77809.1695764069.png?c=1?imbypass=on" alt="">
