--- a/Contactanos.html
+++ b/Contactanos.html
@@ -15,14 +15,14 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="logo.png" alt="" class="logo">
+            <img src="images/logo.png" alt="" class="logo">
         </a>
         <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
             <li><a  href="INICIO.html">Inicio</a></li>
-            <li><a class="active" href="http://127.0.0.1:3000/c:/Users/yaelx/OneDrive/Desktop/1/prueba.html">Contáctanos</a></li>
-            <li><a href="https://velnergroup.github.io/Quienes.html">Quienes somos</a></li>
-            <li><a href="https://velnergroup.github.io/MENU.html">Catálogo</a></li>
+            <li><a class="active" href="contactanos.html">Contáctanos</a></li>
+            <li><a href="Quienes.html">Quienes somos</a></li>
+            <li><a href="MENU.html">Catálogo</a></li>
         </ul>
     </nav>
     
