--- a/INICIO.html
+++ b/INICIO.html
@@ -22,7 +22,7 @@
         <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
             <li><a class="active" href="INICIO.html">Inicio</a></li>
-            <li><a href="#">Contáctanos</a></li>
+            <li><a href="Contactanos.html">Contáctanos</a></li>
             <li><a href="Quienes.html">Quienes somos</a></li>
             <li><a href="MENU.html">Catálogo</a></li>
         </ul>
