--- a/Contactanos.html
+++ b/Contactanos.html
@@ -21,7 +21,7 @@
         <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
             <li><a  href="INICIO.html">Inicio</a></li>
-            <li><a class="active" href="contactanos.html">Contáctanos</a></li>
+            <li><a class="active" href="Contactanos.html">Contáctanos</a></li>
             <li><a href="Quienes.html">Quienes somos</a></li>
             <li><a href="MENU.html">Catálogo</a></li>
         </ul>
