--- a/Quienes.html
+++ b/Quienes.html
@@ -21,7 +21,7 @@
         <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
             <li><a href="INICIO.html">Inicio</a></li>
-            <li><a href="#">Contáctanos</a></li>
+            <li><a href="Contactanos.html">Contáctanos</a></li>
             <li><a class="active" href="Quienes.html">Quienes somos</a></li>
             <li><a href="MENU.html">Catálogo</a></li>
         </ul>
