--- a/MENU.html
+++ b/MENU.html
@@ -24,7 +24,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logos.png" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -59,7 +59,7 @@
                         </td>
                         <td>
                             <section class="buttons">
-                                <a class="fa-brands fa-microsoft"></a>
+                                <a class="fa-brands fa-instagram"></a>
                               </section>
                         </td>
                         <td>
@@ -73,7 +73,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logos.png" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -107,7 +107,7 @@
                         </td>
                         <td>
                             <section class="buttons">
-                                <a class="fa-brands fa-microsoft"></a>
+                                <a class="fa-brands fa-instagram"></a>
                               </section>
                         </td>
                         <td>
@@ -121,7 +121,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logos.png" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -155,7 +155,7 @@
                         </td>
                         <td>
                             <section class="buttons">
-                                <a class="fa-brands fa-microsoft"></a>
+                                <a class="fa-brands fa-instagram"></a>
                               </section>
                         </td>
                         <td>
@@ -169,7 +169,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logos.png" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -203,7 +203,7 @@
                         </td>
                         <td>
                             <section class="buttons">
-                                <a class="fa-brands fa-microsoft"></a>
+                                <a class="fa-brands fa-instagram"></a>
                               </section>
                         </td>
                         <td>
@@ -217,7 +217,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logos.png" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -251,7 +251,7 @@
                         </td>
                         <td>
                             <section class="buttons">
-                                <a class="fa-brands fa-microsoft"></a>
+                                <a class="fa-brands fa-instagram"></a>
                               </section>
                         </td>
                         <td>
@@ -265,7 +265,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logos.png" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -299,7 +299,7 @@
                         </td>
                         <td>
                             <section class="buttons">
-                                <a class="fa-brands fa-microsoft"></a>
+                                <a class="fa-brands fa-instagram"></a>
                               </section>
                         </td>
                         <td>
@@ -313,7 +313,7 @@
 	            <div class="swiper-slide">
                 <div class="icons">
                   <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logos.png" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -347,7 +347,7 @@
                         </td>
                         <td>
                             <section class="buttons">
-                                <a class="fa-brands fa-microsoft"></a>
+                                <a class="fa-brands fa-instagram"></a>
                               </section>
                         </td>
                         <td>
