--- a/INICIO.html
+++ b/INICIO.html
@@ -17,7 +17,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="images/logo.png" alt="" class="logo">
+            <img src="images/logo.jpeg" alt="" class="logo">
         </a>
         <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
@@ -30,7 +30,7 @@
     
     <section>
         <video muted autoplay loop>
-            <source src="Fondo.mp4" type="video/mp4">
+            <source src="fondos/operador.mp4" type="video/mp4">
           </video>
           <div class="capa"></div>
     </section>
