--- a/INICIO.html
+++ b/INICIO.html
@@ -30,7 +30,7 @@
     
     <section>
         <video muted autoplay loop>
-            <source src="fondos/operador.mp4" type="video/mp4">
+            <source src="fondos/operadorr.mp4" type="video/mp4">
           </video>
           <div class="capa"></div>
     </section>
