--- a/Quienes.html
+++ b/Quienes.html
@@ -38,7 +38,7 @@
             <p>Proteger la vida y perseverar el bienestar y salud de los colaboradores, ofreciendo el equipo adecuado con los más altos estándares de seguridad.</p>
         </div>
         <video muted autoplay loop>
-            <source src="Fondo.mp4" type="video/mp4">
+            <source src="fondos/bombeross.mp4" type="video/mp4">
           </video>
           <div class="capa"></div>
     </section>
