--- a/Contactanos.html
+++ b/Contactanos.html
@@ -16,7 +16,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="images/logo.png" alt="" class="logo">
+            <img src="images/logo.jpeg" alt="" class="logo">
         </a>
         <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
@@ -46,7 +46,7 @@
                 </form>
             </div>
             <video muted autoplay loop>
-                <source src="Fondo.mp4" type="video/mp4">
+                <source src="fondos/madereria.mp4" type="video/mp4">
               </video>
         </div>
     </section>
