--- a/Quienes.html
+++ b/Quienes.html
@@ -16,7 +16,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="images/logo.png" alt="" class="logo">
+            <img src="images/logo.jpeg" alt="" class="logo">
         </a>
         <div class="mid-text">SEGURIDAD Y PROTECCIÓN A TU MEDIDA</div>
         <ul>
