--- a/MENU.html
+++ b/MENU.html
@@ -24,7 +24,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logos.png" alt="">
+                    <img src="images/logo.jpeg" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -73,7 +73,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logos.png" alt="">
+                    <img src="images/logo.jpeg" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -121,7 +121,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logos.png" alt="">
+                    <img src="images/logo.jpeg" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -169,7 +169,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logos.png" alt="">
+                    <img src="images/logo.jpeg" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -217,7 +217,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logos.png" alt="">
+                    <img src="images/logo.jpeg" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -265,7 +265,7 @@
             <div class="swiper-slide">
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logos.png" alt="">
+                    <img src="images/logo.jpeg" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
@@ -313,7 +313,7 @@
 	            <div class="swiper-slide">
                 <div class="icons">
                   <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
-                    <img src="images/logos.png" alt="">
+                    <img src="images/logo.jpeg" alt="">
                     <label class="heart-checkbox">
                         <input type="checkbox" />
                         <i class="fa fa-heart"></i>
