--- a/Quienes.html
+++ b/Quienes.html
@@ -42,6 +42,16 @@
           </video>
           <div class="capa"></div>
     </section>
-    
+    <footer>
+        <div class="footer-content">
+            <p>contacto:Av.villa escondida 12,Col.Villas de cuautitlán,C.P.54857,CUAUTITLÁN
+            </p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/VELNERGROUP" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://wa.me/message/KIJDZKC2ZKSPD1" target="_blank" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.instagram.com" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
