--- a/INICIO.html
+++ b/INICIO.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velner Group</title>
     <link rel="icon" href="images/logo.ico">
-    <link rel="stylesheet" href="intento.css">
+    <link rel="stylesheet" href="somos.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
