--- a/INICIO.html
+++ b/INICIO.html
@@ -33,6 +33,7 @@
             <source src="fondos/operadorr.mp4" type="video/mp4">
           </video></div>
         <div class="search-bar">
+            <h3>"Encuentra el equipo de seguridad perfecto para tus necesidades: cascos, guantes y más, todo en un solo lugar."</h3>
             <input list="pageNames" id="pageInput" placeholder="Buscar..." oninput="navigateToPage()">
             <datalist id="pageNames">
                 <option value="Mascarillas"></option>
